// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe kuFxqE"
    >
      <input
        class="peer hidden"
        type="radio"
        value=""
      />
      <div
        class="sc-jSUZER eulufV"
        color="primary"
      />
      <div
        class="sc-gKPRtg lmistq"
        color="primary"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe ccFLMP"
    >
      <input
        class="peer hidden"
        type="radio"
        value=""
      />
      <div
        class="sc-jSUZER eAbsrQ"
        color="primary"
      />
      <div
        class="sc-gKPRtg lmistq"
        color="primary"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP bwQUxR"
    disabled=""
  >
    <div
      class="sc-eDvSVe ccFLMP"
    >
      <input
        class="peer hidden"
        disabled=""
        type="radio"
        value=""
      />
      <div
        class="sc-jSUZER kPfgwW"
        color="primary"
        disabled=""
      />
      <div
        class="sc-gKPRtg gvGJXl"
        color="primary"
        disabled=""
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
